--- a/app/lang/fr-BE/site.yml
+++ b/app/lang/fr-BE/site.yml
@@ -4,3 +4,15 @@ intro:
   title: Title fr
   body: |
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque rhoncus pharetra pharetra. In hac habitasse platea dictumst. Pellentesque sodales, tellus vel imperdiet ornare, magna diam rutrum libero, vel tincidunt dolor mauris at dolor. Duis aliquet orci ac rutrum semper. Cras tristique nibh augue, ut tristique ipsum scelerisque a. Proin suscipit arcu id orci venenatis accumsan. Praesent massa massa, laoreet non fermentum eu, viverra a dui. Vivamus gravida mollis risus eget fermentum. Ut tellus nibh, ultricies eu urna sed, eleifend vehicula diam. Sed sagittis augue tempus nunc sagittis consectetur. Etiam id odio ac tortor pretium pharetra. Nunc a tincidunt dolor. Suspendisse pulvinar metus ac risus posuere, id ultricies turpis aliquam.
+contact:
+    title: WRITE US
+    address: <strong>BBDO DATA</strong><br>Scheldestraat 122<br>1080 Brussel
+    error: AN ERROR OCCURED
+    fields:
+      firstname: FIRSTNAME
+      lastname: LASTNAME
+      question: QUESTION
+    submit: SEND
+
+    title_thx: THANKS FOR WRITING US
+    intro_thx:
