form file upload + validation

--- a/app/lang/nl-BE/site.yml
+++ b/app/lang/nl-BE/site.yml
@@ -12,6 +12,7 @@ contact:
       firstname: FIRSTNAME
       lastname: LASTNAME
       question: QUESTION
+      file: FILE
     submit: SEND
 
     title_thx: THANKS FOR WRITING US
